<?xml version="1.0" encoding="utf-8"?><!--
  ~ /*
  ~  * MIT License
  ~  *
  ~  * Copyright (c) [2017] [velli20]
  ~  *
  ~  * Permission is hereby granted, free of charge, to any person obtaining a copy
  ~  * of this software and associated documentation files (the "Software"), to deal
  ~  * in the Software without restriction, including without limitation the rights
  ~  * to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~  * copies of the Software, and to permit persons to whom the Software is
  ~  * furnished to do so, subject to the following conditions:
  ~  *
  ~  * The above copyright notice and this permission notice shall be included in all
  ~  * copies or substantial portions of the Software.
  ~  *
  ~  * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~  * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~  * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~  * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~  * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~  * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~  * SOFTWARE.
  ~  */
  -->


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <Spinner
        android:id="@+id/activity_add_new_event_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp" />


    <View
        android:id="@+id/activity_add_new_event_spinner_divider"
        style="@style/Divider"
        android:layout_below="@+id/activity_add_new_event_spinner" />

    <com.velli20.tachograph.views.RobotoLightTextView
        android:id="@+id/activity_add_new_event_title_time"
        style="@style/Subtitle.ActivityAddNewEvent"
        android:layout_width="wrap_content"
        android:layout_below="@+id/activity_add_new_event_spinner_divider"
        android:drawableLeft="@drawable/ic_time"
        android:text="@string/add_event_title_time"
        custom:style="medium" />

    <View
        android:id="@+id/activity_add_new_event_title_time_divider"
        style="@style/Divider.ActivityAddNewEvent"
        android:layout_below="@+id/activity_add_new_event_title_time" />

    <com.velli20.tachograph.views.RobotoLightTextView
        android:id="@+id/activity_add_new_event_title_start_time"
        style="@style/Title.ActivityAddNewEvent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activity_add_new_event_title_time_divider"
        android:layout_toLeftOf="@+id/activity_add_new_event_button_start_time"
        android:text="@string/add_event_event_start_time"
        custom:style="regular" />

    <Button
        android:id="@+id/activity_add_new_event_button_start_time"
        style="@style/ActivityAddNewEventButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activity_add_new_event_title_time_divider"
        android:background="?android:attr/selectableItemBackground"
        android:fontFamily="sans-serif-light" />

    <com.velli20.tachograph.views.RobotoLightTextView
        android:id="@+id/activity_add_new_event_title_end_time"
        style="@style/Title.ActivityAddNewEvent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activity_add_new_event_button_start_time"
        android:layout_toLeftOf="@+id/activity_add_new_event_button_end_time"
        android:text="@string/add_event_event_end_time"
        custom:style="regular" />

    <Button
        android:id="@+id/activity_add_new_event_button_end_time"
        style="@style/ActivityAddNewEventButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activity_add_new_event_button_start_time"
        android:background="?android:attr/selectableItemBackground"
        android:fontFamily="sans-serif-light" />

    <com.velli20.tachograph.views.RobotoLightTextView
        android:id="@+id/activity_add_new_event_title_date"
        style="@style/Subtitle.ActivityAddNewEvent"
        android:layout_width="wrap_content"
        android:layout_below="@+id/activity_add_new_event_title_end_time"
        android:drawableLeft="@drawable/ic_event"
        android:text="@string/add_event_title_date"
        custom:style="medium" />

    <View
        android:id="@+id/activity_add_new_event_title_date_divider"
        style="@style/Divider.ActivityAddNewEvent"
        android:layout_below="@+id/activity_add_new_event_title_date" />


    <com.velli20.tachograph.views.RobotoLightTextView
        android:id="@+id/activity_add_new_event_title_start_date"
        style="@style/Title.ActivityAddNewEvent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activity_add_new_event_title_date_divider"
        android:layout_toLeftOf="@+id/activity_add_new_event_button_start_date"
        android:text="@string/add_event_event_start_date"
        custom:style="regular" />

    <Button
        android:id="@+id/activity_add_new_event_button_start_date"
        style="@style/ActivityAddNewEventButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activity_add_new_event_title_date_divider"
        android:background="?android:attr/selectableItemBackground"
        android:fontFamily="sans-serif-light" />


    <com.velli20.tachograph.views.RobotoLightTextView
        android:id="@+id/activity_add_new_event_title_end_date"
        style="@style/Title.ActivityAddNewEvent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activity_add_new_event_title_start_date"
        android:layout_toLeftOf="@+id/activity_add_new_event_button_end_date"
        android:text="@string/add_event_event_end_date"
        custom:style="regular" />

    <Button
        android:id="@+id/activity_add_new_event_button_end_date"
        style="@style/ActivityAddNewEventButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activity_add_new_event_title_start_date"
        android:background="?android:attr/selectableItemBackground"
        android:fontFamily="sans-serif-light" />

    <LinearLayout
        android:id="@+id/activity_add_new_event_extra_info_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activity_add_new_event_title_end_date"
        android:orientation="vertical">

        <com.velli20.tachograph.views.RobotoLightTextView
            android:id="@+id/activity_add_new_event_title_mileage"
            style="@style/Subtitle.ActivityAddNewEvent"
            android:layout_width="wrap_content"
            android:drawableLeft="@drawable/ic_mileage"
            android:text="@string/add_event_title_mileage"
            custom:style="medium" />

        <View
            android:id="@+id/activity_add_new_event_title_mileage_divider"
            style="@style/Divider.ActivityAddNewEvent" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="48dp">

            <com.velli20.tachograph.views.RobotoLightTextView
                android:id="@+id/activity_add_new_event_title_mileage_start"
                style="@style/Title.ActivityAddNewEvent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/activity_add_new_event_button_mileage_start"
                android:text="@string/add_event_event_mileage_at_start"
                custom:style="regular" />

            <Button
                android:id="@+id/activity_add_new_event_button_mileage_start"
                style="@style/ActivityAddNewEventButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:fontFamily="sans-serif-light" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="48dp">

            <com.velli20.tachograph.views.RobotoLightTextView
                android:id="@+id/activity_add_new_event_title_mileage_end"
                style="@style/Title.ActivityAddNewEvent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/activity_add_new_event_button_mileage_end"
                android:text="@string/add_event_event_mileage_at_end"
                custom:style="regular" />

            <Button
                android:id="@+id/activity_add_new_event_button_mileage_end"
                style="@style/ActivityAddNewEventButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:fontFamily="sans-serif-light" />
        </RelativeLayout>


        <View
            android:id="@+id/activity_add_new_event_edit_text_start_location_divider"
            style="@style/Divider.ActivityAddNewEvent" />

        <EditText
            android:id="@+id/activity_add_new_event_edit_text_start_location"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/ic_action_start_location"
            android:drawablePadding="30dp"
            android:drawableStart="@drawable/ic_action_start_location"
            android:hint="@string/add_event_start_location"
            android:inputType="text"
            android:textColorHint="#80000000"
            android:textSize="16sp" />

        <View
            android:id="@+id/activity_add_new_event_edit_text_end_location_divider"
            style="@style/Divider.ActivityAddNewEvent" />

        <EditText
            android:id="@+id/activity_add_new_event_edit_text_end_location"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="15dp"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/ic_action_end_location"
            android:drawablePadding="30dp"
            android:drawableStart="@drawable/ic_action_end_location"
            android:hint="@string/add_event_end_location"
            android:inputType="text"
            android:textColorHint="#80000000"
            android:textSize="16sp" />
    </LinearLayout>

    <View
        android:id="@+id/activity_add_event_edit_text_note_divider"
        style="@style/Divider.ActivityAddNewEvent"
        android:layout_below="@+id/activity_add_new_event_extra_info_container" />

    <EditText
        android:id="@+id/add_new_event_note"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@+id/activity_add_event_edit_text_note_divider"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:background="@android:color/transparent"
        android:drawableLeft="@drawable/ic_note"
        android:drawablePadding="30dp"
        android:hint="@string/add_event_event_add_note"
        android:inputType="text"
        android:textColorHint="#80000000"
        android:textSize="16sp" />

</RelativeLayout>