<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ /*
  ~  * MIT License
  ~  *
  ~  * Copyright (c) [2017] [velli20]
  ~  *
  ~  * Permission is hereby granted, free of charge, to any person obtaining a copy
  ~  * of this software and associated documentation files (the "Software"), to deal
  ~  * in the Software without restriction, including without limitation the rights
  ~  * to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~  * copies of the Software, and to permit persons to whom the Software is
  ~  * furnished to do so, subject to the following conditions:
  ~  *
  ~  * The above copyright notice and this permission notice shall be included in all
  ~  * copies or substantial portions of the Software.
  ~  *
  ~  * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~  * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~  * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~  * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~  * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~  * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~  * SOFTWARE.
  ~  */
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="16dp"
    android:paddingStart="16dp"
    android:paddingRight="16dp"
    android:paddingEnd="16dp"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/working_days_title_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal" >

        <com.velli.tachograph.views.RobotoLightTextView
            android:id="@+id/working_days_group_title"
            style="@style/Subtitle"
            custom:style="medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left|center_vertical" />

        <com.velli.tachograph.views.RobotoLightTextView
            android:id="@+id/working_days_group_date"
            style="@style/Subtitle"
            custom:style="medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right|center_vertical" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/working_days_weekly_drive_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp" >

        <com.velli.tachograph.views.RobotoLightTextView
            android:id="@+id/working_days_weekly_drive_time_title"
            style="@style/ListWorkLimitText"
            custom:style="italic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true" 
            android:layout_alignParentStart="true"
            android:text="@string/working_days_weekly_drive_time" />

        
        <com.velli.tachograph.views.RobotoLightTextView
            android:id="@+id/working_days_weekly_drive_time"
            style="@style/ListSecondaryText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true" 
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/working_days_weekly_work_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <com.velli.tachograph.views.RobotoLightTextView
            android:id="@+id/working_days_weekly_work_time_title"
            style="@style/ListWorkLimitText"
            custom:style="italic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="@string/working_days_weekly_work_time" />

        
        <com.velli.tachograph.views.RobotoLightTextView
            android:id="@+id/working_days_weekly_work_time"
            style="@style/ListSecondaryText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true" 
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/working_days_weekly_rest_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" >

        <com.velli.tachograph.views.RobotoLightTextView
            android:id="@+id/working_days_weekly_rest_time_title"
            style="@style/ListWorkLimitText"
            custom:style="italic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true" 
            android:layout_alignParentStart="true"
            android:text="@string/working_days_weekly_rest_time" />


        
        <com.velli.tachograph.views.RobotoLightTextView
            android:id="@+id/working_days_weekly_rest_time"
            style="@style/ListSecondaryText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true" 
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/working_days_wtd_weekly_work_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <com.velli.tachograph.views.RobotoLightTextView
            android:id="@+id/working_days_wtd_weekly_work_time_title"
            style="@style/ListWorkLimitText"
            custom:style="italic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true" 
            android:layout_alignParentStart="true"
            android:text="@string/working_days_wtd_weekly_work_time" />

        
        <com.velli.tachograph.views.RobotoLightTextView
            android:id="@+id/working_days_wtd_weekly_work_time"
            style="@style/ListSecondaryText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true" 
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/working_days_wtd_weekly_rest_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp" >

        <com.velli.tachograph.views.RobotoLightTextView
            android:id="@+id/working_days_wtd_weekly_rest_time_title"
            style="@style/ListWorkLimitText"
            custom:style="italic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true" 
            android:layout_alignParentStart="true"
            android:text="@string/working_days_wtd_weekly_rest_time" />


        
        <com.velli.tachograph.views.RobotoLightTextView
            android:id="@+id/working_days_wtd_weekly_rest_time"
            style="@style/ListSecondaryText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true" 
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>



</LinearLayout>